--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first webste</h1>
+    <h1>my first website</h1>
+    <h2>its okey...</h2>
+
 </body>
 </html>
